--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
- REACT_APP_MY_SERVICE_ID = "tijanisyllaemailjs"
- REACT_APP_MY_TEMPLATE_ID = "mytemplateID",
+ REACT_APP_MY_SERVICE = "tijanisyllaemailjs"
+ REACT_APP_MY_TEMPLATE = "mytemplateID"
  REACT_APP_MY_PUBLIC_KEY = "b8dwGrlsKpPz4T7zq"
