--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,7 @@
 /.pnp
 .pnp.js
 
-# ignore .env file in root directory
-.env
+
 
 # testing
 /coverage
@@ -20,7 +19,10 @@
 .env.development.local
 .env.test.local
 .env.production.local
-
+.env
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.env.public
+.env.*.local
+env.production.public
