--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,9 @@
 /.pnp
 .pnp.js
 
-
+# ENV
+.env
+/.env
 
 # testing
 /coverage
@@ -19,7 +21,6 @@
 .env.development.local
 .env.test.local
 .env.production.local
-.env
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
