--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@types/react-scroll": "^1.8.5",
     "dotenv": "^16.0.3",
@@ -22,6 +21,7 @@
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
     "swiper": "^8.4.5",
+    "three": "^0.150.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -54,6 +54,7 @@
   "devDependencies": {
     "@types/express": "^4.17.15",
     "@types/node": "^18.11.17",
+    "@types/react": "^18.0.30",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   }
