--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/jest": "^27.5.2",
     "@types/react-dom": "^18.0.9",
     "@types/react-scroll": "^1.8.5",
+    "classnames": "^2.3.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "nodemon": "^2.0.20",
