added a custom domain

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-portfolio",
   "version": "0.1.0",
-  "homepage": "https://tijanisylla.github.io/my-portfolio",
+  "homepage": "https://www.tijanisylla.dev",
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.10.0",
