--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-portfolio",
   "version": "0.1.0",
-  "homepage": "https://www.tijanisylla.dev",
+  "homepage": "https://tijanisylla.dev",
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.10.0",
@@ -27,6 +27,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "dev:js": "node ./backend/app.js",
+    "dev:ts": "nodemon ./backend/app.ts",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -54,7 +56,6 @@
     "@types/express": "^4.17.15",
     "@types/node": "^18.11.17",
     "@types/react": "^18.0.30",
-    "gh-pages": "^6.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   }
