--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@types/express": "^4.17.15",
     "@types/node": "^18.11.17",
     "@types/react": "^18.0.30",
+    "gh-pages": "^6.3.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   }
